@@ -577,6 +577,10 @@ Trunk (unreleased changes)
     HADOOP-4139. Optimize Hive multi group-by.
     (Namin Jain via dhruba)
 
+		HADOOP-3911. Add a check to fsck options to make sure -files is not 
+		the first option to resolve conflicts with GenericOptionsParser
+		(lohit)
+
 Release 0.18.1 - 2008-09-17
 
   IMPROVEMENTS
